@@ -31,67 +31,72 @@ class StoreMatchingEngineTest {
     private StoreMatchingEngine storeMatchingEngine;
 
     @Test
-    void findOptimalStore_ShouldReturnNull_WhenItemIdsListIsNull() {
-        StoreMatchingEngine.StoreMatchResult result = storeMatchingEngine.findOptimalStore(47.15, 27.58, 5000, null);
+    void findOptimalStores_ShouldReturnEmptyList_WhenItemIdsListIsNull() {
+        List<StoreMatchingEngine.StoreMatchResult> result = storeMatchingEngine.findOptimalStores(47.15, 27.58, 5000, null);
 
-        assertNull(result);
+        assertTrue(result.isEmpty());
         verifyNoInteractions(namedJdbcTemplate);
     }
 
     @Test
-    void findOptimalStore_ShouldReturnNull_WhenItemIdsListIsEmpty() {
-        StoreMatchingEngine.StoreMatchResult result = storeMatchingEngine.findOptimalStore(47.15, 27.58, 5000, Collections.emptyList());
+    void findOptimalStores_ShouldReturnEmptyList_WhenItemIdsListIsEmpty() {
+        List<StoreMatchingEngine.StoreMatchResult> result = storeMatchingEngine.findOptimalStores(47.15, 27.58, 5000, Collections.emptyList());
 
-        assertNull(result);
+        assertTrue(result.isEmpty());
         verifyNoInteractions(namedJdbcTemplate);
     }
 
     @Test
     @SuppressWarnings("unchecked")
-    void findOptimalStore_ShouldReturnNull_WhenNoStoresFound() {
+    void findOptimalStores_ShouldReturnEmptyList_WhenNoStoresFound() {
         List<UUID> items = Arrays.asList(UUID.randomUUID(), UUID.randomUUID());
         when(namedJdbcTemplate.query(anyString(), any(SqlParameterSource.class), any(RowMapper.class)))
                 .thenReturn(Collections.emptyList());
 
-        StoreMatchingEngine.StoreMatchResult result = storeMatchingEngine.findOptimalStore(47.15, 27.58, 5000, items);
+        List<StoreMatchingEngine.StoreMatchResult> result = storeMatchingEngine.findOptimalStores(47.15, 27.58, 5000, items);
 
-        assertNull(result);
+        assertTrue(result.isEmpty());
         verify(namedJdbcTemplate).query(anyString(), any(SqlParameterSource.class), any(RowMapper.class));
     }
 
     @Test
     @SuppressWarnings("unchecked")
-    void findOptimalStore_ShouldReturnBestStore_WhenStoresAreFound() {
+    void findOptimalStores_ShouldReturnTopThreeStores_WhenStoresAreFound() {
         List<UUID> items = Arrays.asList(UUID.randomUUID(), UUID.randomUUID());
-        String storeId = UUID.randomUUID().toString();
-        String storeName = "Supermarket Central";
-        int matchedItems = 2;
-        double distance = 1200.5;
+        String storeId1 = UUID.randomUUID().toString();
+        String storeId2 = UUID.randomUUID().toString();
+        String storeId3 = UUID.randomUUID().toString();
 
         when(namedJdbcTemplate.query(anyString(), any(SqlParameterSource.class), any(RowMapper.class)))
                 .thenAnswer(invocation -> {
                     RowMapper<StoreMatchingEngine.StoreMatchResult> mapper = invocation.getArgument(2);
-                    ResultSet rs = mock(ResultSet.class);
-                    when(rs.getString("store_id")).thenReturn(storeId);
-                    when(rs.getString("name")).thenReturn(storeName);
-                    when(rs.getInt("matched_items")).thenReturn(matchedItems);
-                    when(rs.getDouble("distance_m")).thenReturn(distance);
-                    
-                    return Collections.singletonList(mapper.mapRow(rs, 0));
+                    return List.of(
+                            mapper.mapRow(mockResultSet(storeId1, "Supermarket Central", 3, 1200.5), 0),
+                            mapper.mapRow(mockResultSet(storeId2, "Market Nord", 2, 1500.0), 1),
+                            mapper.mapRow(mockResultSet(storeId3, "Fresh Corner", 1, 1800.25), 2)
+                    );
                 });
 
-        StoreMatchingEngine.StoreMatchResult actualStore = storeMatchingEngine.findOptimalStore(47.1585, 27.6014, 3000.0, items);
+        List<StoreMatchingEngine.StoreMatchResult> actualStores = storeMatchingEngine.findOptimalStores(47.1585, 27.6014, 3000.0, items);
 
-        assertNotNull(actualStore);
-        assertEquals(storeId, actualStore.storeId());
-        assertEquals(storeName, actualStore.storeName());
-        assertEquals(matchedItems, actualStore.matchedItems());
-        assertEquals(distance, actualStore.distanceMeters());
+        assertEquals(3, actualStores.size());
+        StoreMatchingEngine.StoreMatchResult firstStore = actualStores.getFirst();
+        assertEquals(storeId1, firstStore.storeId());
+        assertEquals("Supermarket Central", firstStore.storeName());
+        assertEquals(3, firstStore.matchedItems());
+        assertEquals(1200.5, firstStore.distanceMeters());
+        assertEquals(storeId2, actualStores.get(1).storeId());
+        assertEquals(storeId3, actualStores.get(2).storeId());
+
+        ArgumentCaptor<String> sqlCaptor = ArgumentCaptor.forClass(String.class);
+        verify(namedJdbcTemplate).query(sqlCaptor.capture(), any(SqlParameterSource.class), any(RowMapper.class));
+        assertTrue(sqlCaptor.getValue().contains("HAVING COUNT(sim.item_id) > 0"));
+        assertTrue(sqlCaptor.getValue().contains("LIMIT 3"));
     }
 
     @Test
     @SuppressWarnings("unchecked")
-    void findOptimalStore_ShouldPassCorrectNamedParameters() {
+    void findOptimalStores_ShouldPassCorrectNamedParameters() {
         // Arrange
         List<UUID> items = Arrays.asList(UUID.randomUUID(), UUID.randomUUID());
         double lat = 47.1585;
@@ -106,7 +111,7 @@ class StoreMatchingEngineTest {
                 .thenReturn(Collections.emptyList());
 
         // Act
-        storeMatchingEngine.findOptimalStore(lat, lng, radiusMeters, items);
+        storeMatchingEngine.findOptimalStores(lat, lng, radiusMeters, items);
 
         // Assert
         ArgumentCaptor<SqlParameterSource> paramsCaptor = ArgumentCaptor.forClass(SqlParameterSource.class);
@@ -115,10 +120,28 @@ class StoreMatchingEngineTest {
         SqlParameterSource capturedParams = paramsCaptor.getValue();
 
         // Verify the named parameters mapped into the query
-        assertEquals(lat, (Double) capturedParams.getValue("lat"), 0.0001);
-        assertEquals(lng, (Double) capturedParams.getValue("lng"), 0.0001);
-        assertEquals(radiusMeters, (Double) capturedParams.getValue("radiusMeters"), 0.0001);
-        assertEquals(expectedRadiusDegrees, (Double) capturedParams.getValue("radiusDegrees"), 0.0001);
+        Double capturedLat = (Double) capturedParams.getValue("lat");
+        Double capturedLng = (Double) capturedParams.getValue("lng");
+        Double capturedRadiusMeters = (Double) capturedParams.getValue("radiusMeters");
+        Double capturedRadiusDegrees = (Double) capturedParams.getValue("radiusDegrees");
+
+        assertNotNull(capturedLat);
+        assertNotNull(capturedLng);
+        assertNotNull(capturedRadiusMeters);
+        assertNotNull(capturedRadiusDegrees);
+        assertEquals(lat, capturedLat, 0.0001);
+        assertEquals(lng, capturedLng, 0.0001);
+        assertEquals(radiusMeters, capturedRadiusMeters, 0.0001);
+        assertEquals(expectedRadiusDegrees, capturedRadiusDegrees, 0.0001);
         assertEquals(items, capturedParams.getValue("itemIds"));
+    }
+
+    private ResultSet mockResultSet(String storeId, String storeName, int matchedItems, double distanceMeters) throws Exception {
+        ResultSet rs = mock(ResultSet.class);
+        when(rs.getString("store_id")).thenReturn(storeId);
+        when(rs.getString("name")).thenReturn(storeName);
+        when(rs.getInt("matched_items")).thenReturn(matchedItems);
+        when(rs.getDouble("distance_m")).thenReturn(distanceMeters);
+        return rs;
     }
 }
